# nbcollection

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  build.sh  ci_requirements.txt  metadata.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yaml  ci_cron_weekly.yml  ci_workflows.yml
docs/: architecture.rst  ci_example.rst  conf.py  getting_started.rst  index.rst  installing_build_machinery.rst  website_generation_and_deployment.rst
docs/ci/: architecture.rst  ci_enable.rst  ci_example.rst  exceptions.rst  index.rst  venv.rst
docs/nbcollection/: index.rst
html/: convert.py  index.ipynb  index.tpl
html/example_notebook1/: test.tpl
html/hooks/: post_gen_project.py
html/{{ cookiecutter.pages_name }}/: nb_html.tpl
html_template/: cookiecutter.json
html_template/hooks/: post_gen_project.py
html_template/{{ cookiecutter.pages_name }}/: index.tpl
nbcollection/: __init__.py  __main__.py  config.py  converter.py  logger.py  nb_helpers.py  notebook.py
nbcollection/ci/: README.md  README.rst  __main__.py  constants.py  datatypes.py  exceptions.py  utils.py
nbcollection/ci/build_notebooks/: factory.py  multi.py
nbcollection/ci/commands/: build_notebooks.py  datatypes.py  generate_ci_environment.py  install.py  merge_artifacts.py  metadata.py  pull_request.py  replicate.py  site_deployment.py  sync_notebooks.py  uninstall.py  utils.py  venv.py
nbcollection/ci/generate_ci_environment/: constants.py  factory.py  utils.py
nbcollection/ci/generator/: __init__.py  circle_ci.py  datatypes.py  template.py  utils.py
nbcollection/ci/merge_artifacts/: constants.py  datatypes.py  factory.py  html_builder.py  utils.py
nbcollection/ci/merge_artifacts/template/: environment.toml  header.html  index.html  notebook-header.html  notebook-styles.html  notebook.html
nbcollection/ci/merge_artifacts/template/assets/: main.css
nbcollection/ci/metadata/: __init__.py  factory.py  utils.py
nbcollection/ci/pull_requests/: factory.py  utils.py
nbcollection/ci/renderer/: __init__.py
nbcollection/ci/renderer/template/: build-pull-request.sh  build.tmpl.sh  setup-build-env.tmpl.sh  setup-env.sh
nbcollection/ci/replicate/: __init__.py  datatypes.py  factory.py  utils.py  virtual_env.py
nbcollection/ci/scanner/: __init__.py  service.py  utils.py
nbcollection/ci/site_deployment/: factory.py
nbcollection/ci/sync_notebooks/: factory.py
nbcollection/ci/template/: __init__.py
nbcollection/ci/template/template-files/circle-ci/: build_artifacts.py  consolidate_pages.py  create_artifacts.py
nbcollection/ci/template/template-files/circle-ci/stage-one/: config.yaml  sync-build-branch.sh
nbcollection/commands/: __init__.py  argparse_helpers.py  convert.py  execute.py
nbcollection/tests/: test_cli.py
nbcollection/tests/data/: default.tpl
nbcollection/themes/: __init__.py
nbcollection/themes/learnastropy/: __init__.py  html.py  tocpreprocessor.py
nbcollection/themes/learnastropy/templates/html/: astropy-footer.html.j2  astropy-header.html.j2  astropy-sidebar.html.j2  astropytutorial.css  conf.json  index.html.j2
nbcollection_tests/: __init__.py
nbcollection_tests/ci/: exceptions.py  test_commands.py  test_generator.py  test_html_builder.py  test_metadata.py  test_pull_requests.py  test_replicate.py  test_scanner.py
nbcollection_tests/ci/tools/: __init__.py  constants.py  utils.py
nbcollection_tests/ci/tools/integrations/: __init__.py  constants.py  datatypes.py  github.py  local.py  utils.py
nbcollection_tests/ci/tools/template/executed-collection/collection_one/executed-notebooks/: Executed-Notebook.ipynb
nbcollection_tests/ci/tools/template/metadata-rich-notebooks/collection_one/metadata-rich-notebooks/: Notebook-One.ipynb
nbcollection_tests/ci/tools/template/multi-level-ignore/: .gitignore
nbcollection_tests/ci/tools/template/multi-level-ignore/first/: .gitignore
nbcollection_tests/ci/tools/template/multi-notebook-category/collection_one/alot-of-notebooks/: Notebook-Two.ipynb
nbcollection_tests/ci/tools/template/nbcollection-notebook-test-repo/: README.md
nbcollection_tests/ci/tools/template/quick-build-collection/collection_one/quick-build/: Quickbuild-Notebook.ipynb
nbcollection_tests/ci/tools/template/repo-with-html/sourced-html/: one.html
nbpages/: __init__.py  check_nbs.py  convert.py  converter.py  html_index.py  reporter.py
nbpages/tests/: test_convert.py
nbstatic/: __init__.py  __main__.py  convert.py  converter.py  core.py  logger.py  main.py  nb_helpers.py  notebook.py
nbstatic/commands/: argparse_helpers.py  convert.py  execute.py
nbstatic/tests/: test_cli.py  test_nbstatic.py
nbstatic/tests/data/: exception-should-fail.ipynb
nbstatic/tests/data/my_notebooks/: notebook1.ipynb
nbstatic/tests/data/my_notebooks/sub_path1/: notebook2.ipynb  notebook3.ipynb
nbstatic/tests/data/nb_test1/: notebook1.ipynb
nbstatic/tests/data/nb_test2/: notebook2.ipynb
nbstatic/tests/data/nb_test3/nb1/: notebook1.ipynb
nbstatic/tests/data/nb_test3/nb2/: notebook2.ipynb
sphinx/: convert.py
sphinx/rst/: conf.py  index.rst
sphinx_template/: Makefile  convert.py
tests/: __init__.py  test_cli.py
tests/data/: exception-should-fail.ipynb  exception-should-pass.ipynb
tests/data/my_notebooks/: notebook1.ipynb
tests/data/my_notebooks/sub_path1/: notebook2.ipynb  notebook3.ipynb
tests/data/nb_test1/: notebook1.ipynb
tests/data/nb_test2/: notebook1.ipynb  notebook2.ipynb
tests/data/nb_test3/nb1/: notebook1.ipynb
tests/data/nb_test3/nb2/: notebook2.ipynb
tests/support/: __init__.py  themes.py
tests/themes/: __init__.py
tests/themes/data/: README.md  color-excess.ipynb
tests/themes/learnastropy/: __init__.py  test_html.py
