[metadata]
name = nbstatic
version = 0.2.dev
provides = nbstatic
author = adrn, eteq
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/adrn/nbstatic
description =

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  nbconvert
  jupyter-client

[options.package_data]
nbstatic/tests/data = *

[options.entry_points]
console_scripts =
    nbstatic = nbstatic.__main__:main
