[metadata]
name = nbcollection
version = 0.2.dev
provides = nbcollection
author = adrn, eteq
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/adrn/nbcollection
description =

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  nbconvert
  jupyter-client

[options.package_data]
nbcollection/tests/data = *

[options.entry_points]
console_scripts =
    nbcollection = nbcollection.__main__:main
