[metadata]
name = nbcollection
version = 0.4.dev
provides = nbcollection
author = adrn, eteq, jbcurtin
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/astropy/nbcollection
description = Execute and convert collections of Jupyter notebooks to static HTML
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  nbconvert
  jupyter-client

[options.package_data]
nbcollection/tests/data = *

[options.entry_points]
console_scripts =
    nbcollection = nbcollection.__main__:main
    nbcollection-ci = nbcollection.ci.__main__:run_from_cli

[flake8]
max-line-length = 120
exclude =
    nbcollection/ci/template/template-files
